Fixed dashboard spacing Fixed Auth-link "login here" button

--- a/src/App.css
+++ b/src/App.css
@@ -171,7 +171,7 @@ body {
 }
 
 .dashboard .primary-btn {
-  margin: 5px 0;
+  margin: 9px 10px;
 }
 
 /* Buttons */
